--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ body {
     margin: 0;
     padding: 20px; 
     font-family: monospace;
-    color: green;
+    color: #0DFF3D;
+    z-index: 0;
 }
 
 #hacker-interface-bg { 
@@ -14,14 +15,32 @@ body {
     width: 100%;
     background-image: url(../img/bg.jpeg);
     opacity: 0.4;
+    z-index: 2;
 }
 
 #hacker-interface-blur { 
     position: absolute;
-    background-color: black;
+    background-color: red;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
-    opacity: 0.2;
+    opacity: 0;
+}
+
+.haxxx {
+    display: none;
+    position: absolute;
+    text-align: center;
+    width: 460px;
+    height: 230px;
+    margin-left: -230px;
+    margin-top: -115px;
+    left: 50%;
+    top: 70%;
+    font-size: 100px;
+    font-weight: bold;
+    font-family: sans-serif;
+    color: red;
+    z-index: 1;
 }
