--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body {
     font-size: 12px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     z-index: 100;
+    display: none;
 }
 
 a { color: #aaa; }
